--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
-[submodule "bundle/fugitive"]
+[submodule "bundle/fugitive.git"]
 	path = bundle/fugitive.git
 	url = http://github.com/tpope/vim-fugitive.git
-[submodule "bundle/python-mode"]
+[submodule "bundle/python-mode.git"]
 	path = bundle/python-mode.git
 	url = https://github.com/klen/python-mode.git
 [submodule "bundle/vim-pathogen.git"]
