--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,12 @@
 [submodule "bundle/vim-pathogen.git"]
 	path = bundle/vim-pathogen.git
 	url = https://github.com/tpope/vim-pathogen.git
+[submodule "bundle/nerdcommenter.git"]
+	path = bundle/nerdcommenter.git
+	url = https://github.com/scrooloose/nerdcommenter.git
+[submodule "bundle/nerdtree.git"]
+	path = bundle/nerdtree.git
+	url = https://github.com/scrooloose/nerdtree.git
+[submodule "bundle/tagbar.git"]
+	path = bundle/tagbar.git
+	url = https://github.com/majutsushi/tagbar.git
