--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "bundle/syntastic.git"]
 	path = bundle/syntastic.git
 	url = https://github.com/scrooloose/syntastic.git
+[submodule "bundle/clang-complete.git"]
+	path = bundle/clang-complete.git
+	url = https://github.com/Rip-Rip/clang_complete.git
