--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "bundle/clang-complete.git"]
 	path = bundle/clang-complete.git
 	url = https://github.com/Rip-Rip/clang_complete.git
+[submodule "bundle/vim-session.git"]
+	path = bundle/vim-session.git
+	url = https://github.com/xolox/vim-session.git
