--- a/.gitmodules
+++ b/.gitmodules
@@ -38,3 +38,6 @@
 [submodule "bundle/ctrlp.vim.git"]
 	path = bundle/ctrlp.vim.git
 	url = https://github.com/kien/ctrlp.vim.git
+[submodule "bundle/ack.vim.git"]
+	path = bundle/ack.vim.git
+	url = https://github.com/mileszs/ack.vim.git
