--- a/.gitmodules
+++ b/.gitmodules
@@ -44,3 +44,7 @@
 [submodule "bundle/latex-box.vim"]
 	path = bundle/latex-box.vim
 	url = http://github.com/LaTeX-Box-Team/LaTeX-Box.git
+[submodule "bundle/YouCompleteMe.git"]
+	path = bundle/YouCompleteMe.git
+	url = https://github.com/Valloric/YouCompleteMe
+  ignore = dirty
